
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct isakmpgen {int np; } ;


 int ISAKMPGEN_SIZE ;
 int bzero (struct isakmpgen*,int ) ;
 struct isakmpgen* malloc (int ) ;

struct isakmpgen * isakmpg(void) {
 struct isakmpgen *isakmpg = malloc(ISAKMPGEN_SIZE);

 bzero(isakmpg, ISAKMPGEN_SIZE);
 isakmpg->np = 69;
}
