; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_22294.c_isakmpg.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_22294.c_isakmpg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.isakmpgen = type { i32 }

@ISAKMPGEN_SIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.isakmpgen* @isakmpg() #0 {
  %1 = alloca %struct.isakmpgen*, align 8
  %2 = alloca %struct.isakmpgen*, align 8
  %3 = load i32, i32* @ISAKMPGEN_SIZE, align 4
  %4 = call %struct.isakmpgen* @malloc(i32 %3)
  store %struct.isakmpgen* %4, %struct.isakmpgen** %2, align 8
  %5 = load %struct.isakmpgen*, %struct.isakmpgen** %2, align 8
  %6 = load i32, i32* @ISAKMPGEN_SIZE, align 4
  %7 = call i32 @bzero(%struct.isakmpgen* %5, i32 %6)
  %8 = load %struct.isakmpgen*, %struct.isakmpgen** %2, align 8
  %9 = getelementptr inbounds %struct.isakmpgen, %struct.isakmpgen* %8, i32 0, i32 0
  store i32 69, i32* %9, align 4
  %10 = load %struct.isakmpgen*, %struct.isakmpgen** %1, align 8
  ret %struct.isakmpgen* %10
}

declare dso_local %struct.isakmpgen* @malloc(i32) #1

declare dso_local i32 @bzero(%struct.isakmpgen*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
